[package]
name = "ZeroicAI"
version = "0.1.0"
edition = "2021"
authors = ["ZeroicAI Contributors"]
license = "MIT OR Apache-2.0"
description = "Comprehensive Rust framework for building intelligent, autonomous multi-agent systems"
repository = "https://github.com/zeroicai/zeroicai"
documentation = "https://docs.rs/ZeroicAI"
keywords = ["agents", "multi-agent", "AOP", "autonomous", "coordination"]
categories = ["simulation", "algorithms"]
readme = "README.md"

[dependencies]
z-core = { git = "https://github.com/zeroicai/z-core", branch = "main" }
z-messaging = { git = "https://github.com/zeroicai/z-messaging", branch = "main" }
z-cognition = { git = "https://github.com/zeroicai/z-cognition", branch = "main" }
z-patterns = { git = "https://github.com/zeroicai/z-patterns", branch = "main" }
z-runtime = { git = "https://github.com/zeroicai/z-runtime", branch = "main" }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
anyhow = "1.0"

[[example]]
name = "quickstart"
path = "examples/quickstart.rs"

[[example]]
name = "messaging"
path = "examples/messaging.rs"

[[example]]
name = "swarm"
path = "examples/swarm.rs"

[[example]]
name = "full_stack"
path = "examples/full_stack.rs"
